--- a/CouchHeroes-Backend/package.json
+++ b/CouchHeroes-Backend/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "start": "npm run serve",
-    "dev": "npm-run-all --parallel server client",
+    "typescript": "tsc --build",
+    "dev": "npm-run-all --parallel typescript server client",
     "server": "npm-run-all --parallel server:*",
     "server:webpack": "webpack --config webpack/webpack.server.js --watch",
     "server:nodemon": "nodemon dist/server/server.js",
@@ -50,7 +51,7 @@
     "npm-run-all": "^4.1.5",
     "object-sizeof": "^1.3.0",
     "ts-loader": "^5.3.3",
-    "typescript": "^3.3.3333",
+    "typescript": "^3.5.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-merge": "^4.2.1",
