--- a/CouchHeroes-Backend/package.json
+++ b/CouchHeroes-Backend/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "npm run serve",
     "typescript": "tsc --build",
-    "dev": "npm-run-all --parallel typescript server client",
+    "dev": "npm-run-all --parallel server client",
     "server": "npm-run-all --parallel server:*",
     "server:webpack": "webpack --config webpack/webpack.server.js --watch",
     "server:nodemon": "nodemon dist/server/server.js",
