at least it runs

--- a/CouchHeroes-Backend/.vscode/tasks.json
+++ b/CouchHeroes-Backend/.vscode/tasks.json
@@ -7,6 +7,13 @@
             "type": "npm",
             "script": "dev",
             "problemMatcher": []
+        },
+        {
+            "type": "npm",
+            "script": "build",
+            "problemMatcher": [
+                "$tslint5"
+            ]
         }
     ]
 }
